    * [LANG-438] - StringUtils - add repeat() method
    * [LANG-445] - StringUtils - add startsWithAny() method
    * [LANG-430] - StringUtils - add upperCase(String, Locale) and lowerCase(String, Locale) methods
    * [LANG-416] - New Reflection package containing ConstructorUtils, FieldUtils, MemberUtils and MethodUtils

BUG FIXES IN 2.5
================

    * [LANG-472] - RandomUtils(JVMRandom) - nextLong() / nextLong(long) now generate properly distributed random numbers 
    * [LANG-494] - CharSet - Synchronizing the COMMON Map so that getInstance doesn't miss a put from a subclass in another thread
    * [LANG-500] - ClassUtils - improving performance of getAllInterfaces
    * [LANG-530] - DateUtils - Fix parseDate() cannot parse ISO8601 dates produced by FastDateFormat
    * [LANG-440] - DateUtils - round() doesn't work correct for Calendar.AM_PM
    * [LANG-443] - DateUtils - improve tests
    * [LANG-538] - FastDateFormat - call getTime() on a calendar to ensure timezone is in the right state
    * [LANG-547] - FastDateFormat - Remove unused field
    * [LANG-506] - Entities missing final modifiers; thread-safety issues
    * [LANG-584] - ExceptionUtils - use immutable lock target
    * [LANG-477] - ExtendedMessageFormat - OutOfMemory with a pattern containing single quotes
    * [LANG-457] - NumberUtils - createNumber() thows a StringIndexOutOfBoundsException for "l"
    * [LANG-521] - NumberUtils - isNumber(String) and createNumber(String) both modified to support '2.'
    * [LANG-432] - StringUtils - improve handling of case-insensitive Strings
    * [LANG-552] - StringUtils - replaceEach() no longer NPEs when null appears in the last String[]
    * [LANG-460] - StringUtils - correct JavaDocs for startsWith() and startsWithIgnoreCase()
    * [LANG-421] - StringEscapeUtils - escapeJava() escapes '/' characters
    * [LANG-450] - StringEscapeUtils - change escapeJavaStyleString() to throw UnhandledException instead swallowing IOException